css fixes, colors, dark mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,24 @@
-/*Responsiveness*/
+@media (max-width:1550px) {
 
+    /*Responsiveness*/
+    .shapka {
+        flex-direction: column !important;
+        align-items: center;
+    }
 
+    .shapka img {
+        max-width: 100%;
+    }
+
+    .menu__list {
+        flex-wrap: wrap;
+    }
+
+    #totop {
+        height: 7vw !important;
+        width: 5vw !important
+    }
+}
 
 @media (max-width:890px) {
     #totop {
@@ -15,44 +33,35 @@
     .lang-switcher {
         min-width: initial !important;
     }
+
+    img {
+        width: 100%;
+    }
+
+    h1 {
+        word-break: break-word;
+    }
+
+    .buttons {
+
+        flex-direction: column;
+    }
 }
 
 .shapka img {
     max-width: 800px;
 }
 
-@media (max-width:1550px) {
-    .shapka {
-        flex-direction: column !important;
-        align-items: center;
-    }
-
-    .shapka img {
-        max-width: 100%;
-    }
-
-    .menu__list {
-        flex-wrap: wrap;
-    }
-}
-
-@media (max-width:1400px) {
-    #totop {
-        height: 7vw !important;
-        width: 5vw !important
-    }
-}
-
-
 * {
-    /*outline: 1px solid black;*/
+    outline: 1px solid black;
     font-family: 'Raleway', sans-serif;
 
 }
 
-/* Themes */
+
 
 :root {
+    /* Themes */
     --color-black: rgb(0, 0, 0);
     --color-dark1: rgb(110, 110, 110);
     --color-dark2: rgb(123, 123, 123);
@@ -61,19 +70,11 @@
     --color-dark5: rgb(161, 161, 161);
     --color-dark6: rgb(174, 174, 174);
     --color-dark7: rgb(186, 186, 186);
-    --color-green: #b2d4b6;
+    --color-grey: rgb(216, 216, 216);
+    --color-darkblue: rgb(73, 107, 118);
+    --color-green: rgb(178, 212, 182);
 }
 
-
-.context>div:nth-child(even) {
-    background-color: #f2f2f2;
-    /* or any other color you prefer */
-}
-
-.context>div {
-    padding-bottom: 60px;
-    padding-top: 60px
-}
 
 
 @media (prefers-color-scheme:light) {
@@ -86,9 +87,8 @@
 
 @media (prefers-color-scheme:dark) {
     body {
-        color: var(--color-green);
-         !important;
-        background-color: #949494;
+        color: var(--color-grey);
+        background-color: var(--color-dark4);
     }
 
     h1,
@@ -96,48 +96,61 @@
     h3,
     p,
     a {
-        color: var(--color-green) !important;
-
+        color: var(--color-dark7) !important;
     }
 
     .context>div:nth-child(even) {
         background-color: var(--color-dark2);
-        /* or any other color you prefer */
     }
-
-
 }
 
 body.dark-mode {
-    color: var(--color-green);
-    background: var(--color-dark6);
-
-
+    color: var(--color-grey);
+    background: var(--color-dark2);
 
     h1,
     h2,
     h3,
     p,
     a {
-        color: var(--color-green) !important;
+        color: var(--color-dark9);
     }
 
     .context>div:nth-child(even) {
-        background-color: var(--color-dark9) !important;
-
+        background-color: var(--color-dark1);
     }
 
+    .buttons div {
+        background: var(--color-darkblue);
+    }
+
+    .shapka {
+        background-image: linear-gradient(to right, #979bb9, #263740);
+    }
+
+    .menu__list {
+        background-image: linear-gradient(to right, #5c7f92, #688797);
+    }
+}
+
+.context>div:nth-child(even) {
+    /*Color even blocks*/
+    background-color: #f2f2f2;
 
 }
 
-/*General*/
+.context>div {
+    padding-bottom: 60px;
+    padding-top: 60px
+}
 
-/** {
+/* {
     margin: 0;
     padding: 0
 }
 */
 html {
+    /*General*/
     font-size: 100%;
     -ms-text-size-adjust: none;
     -webkit-text-size-adjust: none;
@@ -153,6 +166,7 @@ header {
 
 }
 
+/*
 #desktop {
     display: block;
 }
@@ -170,6 +184,7 @@ header {
         display: block;
     }
 }
+*/
 
 h1,
 td,
@@ -185,7 +200,8 @@ h1 {
 
     /*
     border-top: 2px solid black;
-    border-bottom: 2px solid black;*/
+    border-bottom: 2px solid black;
+    */
 }
 
 h2,
@@ -210,6 +226,7 @@ a:visited {
     color: initial;
 }
 */
+
 p {
     text-indent: 20px
 }
@@ -232,14 +249,6 @@ article {
 img,
 ul {
     display: block;
-
-}
-
-
-.context {
-    min-height: 1000px;
-    position: relative;
-    margin-bottom: 50px
 }
 
 ul {
@@ -248,15 +257,9 @@ ul {
 }
 
 
-
-nav {
-    display: flex;
-    justify-content: center;
-    margin: auto;
-    max-width: 1460px;
-}
-
+/* Elements*/
 .shapka {
+    /* Elements*/
     display: flex;
     flex-direction: row;
     /*
@@ -265,19 +268,28 @@ nav {
     background-image: linear-gradient(to right, #ffffff, #a9cde0);
 }
 
+nav {
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    max-width: 1460px;
+}
+
+.context {
+    min-height: 1000px;
+    position: relative;
+    margin-bottom: 50px
+}
+
+
+/*
 .nh img {
     max-width: 550px !important;
     margin-left: 0;
     display: flex;
 }
-
-/*nav {
-    display: flex;
-    justify-content: center;
-    margin: auto;
-    max-width: 160px;
-}
 */
+
 .menu__list {
     margin: auto 12px auto 12px;
     justify-content: center;
@@ -306,15 +318,14 @@ nav {
 
 .menu__item:hover {
     background: grey;
-    padding-bottom: 5px;
-    padding-top: 5px;
+
 }
 
 .active {
     background: lightblue;
-    /*font-size: 120%;*/
+    /*font-size: 120%;
     padding-bottom: 8px;
-    padding-top: 8px;
+    padding-top: 8px;*/
 }
 
 .menu__link {
